implements metrics and /ready
